@@ -1,29 +1,29 @@
-# Sample .travis.yml for R projects.
-#
-# See https://github.com/craigcitro/r-travis
-#     https://github.com/eddelbuettel/r-travis/
+# Run Travis CI for R using https://eddelbuettel.github.io/r-travis/
 
 language: c
 
-env:
-  global:
-    - _R_CHECK_FORCE_SUGGESTS_=FALSE
+sudo: required
+
+dist: trusty
 
 before_install:
-  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
-  - chmod 755 ./travis-tool.sh
-  - ./travis-tool.sh bootstrap
-  - sudo add-apt-repository -y ppa:edd/misc
-  - sudo apt-get update -q
+  - curl -OLs http://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
+  - ./run.sh bootstrap
 
 install:
-  - ./travis-tool.sh install_aptget r-cran-rcpp r-cran-highlight
-  
+  - ./run.sh install_aptget r-cran-rcpp r-cran-highlight
+
 script:
-  - ./travis-tool.sh run_tests
+  - ./run.sh run_tests
+
+after_failure:
+  - ./run.sh dump_logs
 
 notifications:
   email:
     on_success: change
     on_failure: change
+
+    
+
 
